<resources>
    <string name="app_name">EbuyMart</string>
    <string name="about_ebuy">Ebuy is an Internet e-commerce company.\nWe have 7 years experience in this area,we will provide you with fresh supply
        of vegetables,fruits,meat,dried food and cooked food.\n\nWith the powerful supply chain system and good reputation,we have cooperation
        with Singapore haidilao,Tanyu nearly hundreds of restaurants.\n \nEbuy is commited to satisfying consumers demand for shopping experience
        in quality food,providing consumers with good quality groceries and improving after-sales service.
        Ebuy is trying to become an online fresh grocery store that more and more consumers are trusted.Over the past few years,
        with the customers support,Ebuy has succesfully built a high-quality corporate image with high reputation and
        brand characteristics.\n \nWe will continue to strictly control food quality and provide consumers healthier,safer,
        more nutritious and more assured food.We are trying to get Singaporeans to enjoy the freshest and cheapest fresh food.
    </string>
    <string name="consume">Consume</string>
    <string name="remove_product">Remove the Product?</string>
    <string name="order_cancelled_success">Order cancelled succesfully</string>
    <string name="order_updated_success">Order Updated successfully</string>
    <string name="net_balance">NetBalance:</string>
    <string name="refund">Refund</string>
    <string name="balance">Balance:</string>
    <string name="checkout">CheckOut</string>
    <string name="limit_sale_alert">Limit Sale Alert</string>
    <string name="limit_sale">Limit Sale: </string>
    <string name="delivery_cost">Delivery Cost:</string>
    <string name="singapore">Singapore</string>
    <string name="delete">Delete</string>
    <string name="default_address">Default Address</string>
    <string name="set_as_default">Set as Default</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="limit_sale_msg">Current Product Purchase limit : %1$d per order </string>
    <string name="create_new_order">No,Create New Order</string>
    <string name="update_order_date">Yes, update order to deliver on %1$s </string>
    <string name="end_page">End of Page!</string>
    <string name="home">Home</string>
    <string name="shopping_cart">Cart</string>
    <string name="order">Order</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="all_order">All Orders</string>
    <string name="phone">Phone:</string>
    <string name="password">Password:</string>
    <string name="confirm">Confirm:</string>
    <string name="withdraw">withdraw</string>
    <string name="confm">Confirm</string>
    <string name="payment_status">Payment Status:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="paymentmethod">Payment Method</string>
    <string name="postcode">Postcode:</string>
    <string name="fill_up">Please Fill Up the Blanks </string>
    <string name="add_to_cart">Add to Cart"</string>
    <string name="old_password">Old Password: </string>
    <string name="new_password">New Password: </string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="popular">Popular</string>
    <string name="countdown">Closes in</string>
    <string name="limited_offer">Limited Offer</string>
    <string name="sub_total">SubTotal: </string>
    <string name="back">Back</string>
    <string name="postal_code">Postal Code</string>
    <string name="set_postal_code">Set Postal Code</string>
    <string name="building_name">Building Name</string>
    <string name="set_building_name">Set Building Name</string>
    <string name="street_name">Street Name</string>
    <string name="set_street_name">Set Street Name</string>
    <string name="unitno">Unit No #</string>
    <string name="set_unit_no">Set Unit No</string>
    <string name="new_address">New Address</string>
    <string name="outOfStock">Sold Out</string>
    <string name="postcode_hint">Please enter postcode</string>
    <string name="feedback_successful">We have received your message successfully, thanks!</string>
    <string name="customer_service">Customer service </string>
    <string name="customer_service_hour">Note:customer service hours are 9am-9pm daily </string>
    <string name="any_question">Do you have any comments or questions? </string>
    <string name="no_order">You have no order....\nLets \'s go Shopping!
    </string>
    <string name="qty">Qty</string>
    <string name="qty_given">Qty Given</string>
    <string name="stock_available">Stock Available:</string>
    <string name="save_list">Save what you always buy to the list! </string>
    <string name="cancel_order_alert">Are you sure of cancelling order?</string>
    <string name="offer">Offer</string>
    <string name="product">Product</string>
    <string name="me">My</string>
    <string name="order_detail">Order Details</string>
    <string name="some_item_na">Some items are not available</string>
    <string name="something_wrong">something went wrong</string>
    <string name="orderID">Order ID: </string>
    <string name="orderDate">Order Date: </string>
    <string name="deliveryDate">Delivery Date: </string>
    <string name="select_date">Please Select Delivery Date</string>
    <string name="sorry_insufficient">Sorry,We dont have sufficient quantity for following items</string>
    <string name="items_not_avail">Some Items are not available</string>
    <string name="status">Status: </string>
    <string name="total">Total: </string>
    <string name="submit">Submit</string>
    <string name="service">Services</string>
    <string name="processing">Processing</string>
    <string name="customerService">Customer Service</string>
    <string name="more">More</string>
    <string name="transfer">Transfer :</string>
    <string name="history">History</string>
    <string name="refund_tab">Refund</string>
    <string name="all_tab">All</string>
    <string name="consume_tab">Consume</string>
    <string name="enter_amount">Please Enter amount</string>
    <string name="enter_account">Please enter account number</string>
    <string name="less_ecoin">You have less ecoins</string>
    <string name="withdraw_successful">Withdraw Successful</string>
    <string name="details">Details</string>
    <string name="note">Note:</string>
    <string name="min_spend">Minimum spend for delivery is</string>
    <string name="district_postcode">District Status (Postcode)</string>
    <string name="result_postcode">The result of searching:</string>
    <string name="your_unit_no">Your Unit No. is:</string>
    <string name="unit_no">Unit No:</string>
    <string name="district_not_open">District not open! Please Apply!</string>
    <string name="state">State:\u0020</string>
    <string name="open">Open</string>
    <string name="delivery">Delivery:\u0020\u0020</string>
    <string name="district_open_shortly">District will be opened shortly</string>
    <string name="address">Address:\u0020</string>
    <string name="items">Items:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="invoice_info">Invoice Info</string>
    <string name="message">Message</string>
    <string name="special_needs">If you have special needs type here</string>
    <string name="item">items</string>
    <string name="type">Type : </string>
    <string name="amount">Amount : </string>
    <string name="receiver_account">Receiver Account: </string>
    <string name="deliveryTime">Delivery Time Info</string>
    <string name="aboutUs">About Us</string>
    <string name="setting">Setting</string>
    <string name="language_setting">Language Setting</string>
    <string name="modifyPsw">Update Password</string>
    <string name="customerHotline">Customer Hotline</string>
    <string name="version">Version</string>
    <string name="shippingDate">Delivery Date</string>
    <string name="orderStatus">Order Status:  </string>
    <string name="paymentStatus">Payment Status:  </string>
    <string name="cancel">Cancel</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="paper_bill">Paper Bill:</string>
    <string name="cash">Cash</string>
    <string name="saveOrder">Save</string>
    <string name="date">Date :</string>
    <string name="change_delivery_date">Change Delivery Date</string>
    <string name="district">District: </string>
    <string name="order_success">Order Successfully Placed</string>
    <string name="updateOrder">Modify</string>
    <string name="not_refund">not refunded yet</string>
    <string name="consume_history">Consume History</string>
    <string name="save_to_album">Save to Album</string>
    <string name="payment">Payment</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday" >Sun</string>
    <string name="myOrder">Orders</string>
    <string name="purchase">Offer</string>
    <string name="notification">Notification</string>
    <string name="shipping">Shipping</string>
    <string name="plz_Sel_Lan">Please Select Language</string>
    <string name="userName">Username</string>
    <string name="secPassword">Password</string>
    <string name="againPassword">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="attention">Attention:</string>
    <string name="click_if_paid">Click Me if You have paid</string>
    <string name="paynow_phone">Phone: 8518 9139 </string>
    <string name="account_paynow">Account: Ebuy Groupon</string>
    <string name="paynow_handle">Please transfer to our PayNow account, the payment status will change after we receive your bill. We will handle it within 24 hours.</string>
    <string name="all">ALL</string>
    <string name="ok">OK</string>
    <string name="qr_pay">QR PAY</string>
    <string name="scan_receipt">Scan Receipt</string>
    <string name="open_bank_app">1.Open bank app, click QR PAY</string>
    <string name="scan_qr_receipt">2. Scan QR code on the left side of the receipt</string>
    <string name="enter_four_digit">3. Enter the four digits of the order number And enter the amount to be paid</string>
    <string name="confirm_finish_payment">3. Confirm and finish the payment</string>
    <string name="album_msg_4">4. Confirm and finish the payment</string>
    <string name="attention_1">  Our company name is <b> EASY TECH PTE. LTD.</b></string>
    <string name="attention_2">  Please enter first four digits of order no at reference no. </string>
    <string name="attention_3">  You can use Paynow or Paylah to scan the QR code</string>
    <string name="qr_code1">1. Scan QR code on the receipt and pay</string>
    <string name="qr_code2">2. Select QR code image from album and pay, please make sure you save QR image below to album first</string>
    <string name="qr_code3">3. Enter our UEN and pay UEN 201914427Z</string>
    <string name="uen_msg_1">1. Open bank app, click Pay Now</string>
    <string name="uen_msg_2">2. Click on UEN payment and enter the UEN number.Enter the four digits of the order number And enter the amount to be paid</string>
    <string name="uen_payment">UEN Payment</string>
    <string name="ebuy_notification_title">Ebuymart Notification</string>
    <string name="ebuymart_notification_1"> 1. This product is a weighing product.</string>
<string name="ebuymart_notification_2"> 2. The current display price is the standard specification price.</string>
    <string name="ebuymart_notification_3"> 3. The final price is based on the weight of the actual product.</string>
</resources>