<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#fff">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Ebuy PayNow Info"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/paynow_phone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/account_paynow"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textColor="@color/red"
        android:text="@string/paynow_handle"/>


    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"

        android:background="@color/red"
        android:text="@string/ok"

        android:id="@+id/ok"
        android:gravity="center_horizontal"
        android:textColor="#fff"/>

</LinearLayout>