<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:background="@color/red"></TextView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/amount"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:textColor="@color/red"
        android:text="$"/>
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/amt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:id="@+id/all_button"
        android:text="@string/all"
        android:textColor="@color/blue"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/receiver_account"/>
        <EditText
            android:layout_marginLeft="5dp"
            android:layout_width="150dp"
            android:id="@+id/account"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:layout_marginTop="8dp"
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:gravity="center"
        android:background="@color/red"
        android:textColor="#fff"
        android:textAlignment="center"
        android:text="@string/ok"
        android:id="@+id/ok"></Button>


</LinearLayout>
