<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/grey_bkg"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"


            android:layout_gravity="center_horizontal|center_vertical"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_centerInParent="true"

            android:gravity="center"
            android:textAlignment="center"


            android:text="@string/uen_payment"
            android:textColor="@android:color/black"


            android:textSize="17sp" />

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"


        android:text="@string/uen_msg_1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:src="@drawable/iconuen"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/uen_msg_2"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_uen1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/confirm_finish_payment"/>





</LinearLayout>